Created desktop styles for main header and nav

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -427,6 +427,29 @@ img {
 }
 
 
+/**
+* Desktop Styles
+*/
+
+@media screen and (min-width: 800px) {
+  
+  .main-header {
+    display: flex;
+      align-items: center;
+      justify-content: space-between;
+  }
+
+  .main-nav-list {
+    display: flex;
+      align-items: center;
+  }
+
+  .main-nav-item {
+    border-top: none;
+  }
+
+}
+
 
 
 
